i have fix dark mode issue

--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,9 @@
   }
   
   .button {
-    @apply px-4 py-2 bg-textClr text-white font-semibold rounded-md 
+    @apply px-4 py-2 bg-textClr  text-white font-semibold rounded-md 
            hover:bg-opacity-90 transition-colors duration-300
-           dark:bg-secondary dark:hover:bg-opacity-80;
+            dark:hover:bg-opacity-80;
   }
 }
 
